--- a/add-food.html
+++ b/add-food.html
@@ -27,6 +27,15 @@
                     <div class="w-10"></div>
                 </div>
 
+                <div class="flex items-center justify-center space-x-2 mb-4 text-sm">
+                    <span class="font-medium text-gray-600">Free User</span>
+                    <label for="user-status-toggle" class="relative inline-flex items-center cursor-pointer">
+                        <input type="checkbox" value="" id="user-status-toggle" class="sr-only peer">
+                        <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-pink-500"></div>
+                    </label>
+                    <span class="font-medium text-pink-500">Premium User</span>
+                </div>
+
                 <div class="flex justify-center space-x-2 mb-4 flex-shrink-0">
                     <button id="tab-breakfast" class="px-3 py-2 text-sm font-semibold text-gray-500 rounded-full">Breakfast</button>
                     <button id="tab-lunch" class="px-3 py-2 text-sm font-semibold text-gray-500 rounded-full">Lunch</button>
@@ -48,14 +57,23 @@
                 <div class="flex-grow overflow-y-auto -mr-2 pr-2 pb-28">
                     <div id="content-all" class="space-y-3">
                         </div>
-                    <div id="content-my" class="hidden text-center text-gray-500 pt-10">
-                        <p>You haven't saved any food yet.</p>
+
+                    <div id="content-my" class="hidden h-full">
+                        <div id="my-food-list-container" class="space-y-3 h-full">
+                           </div>
                     </div>
-                    <div id="content-quick" class="hidden space-y-4">
-                        <input type="text" placeholder="Food name (e.g., Quick Apple)" class="w-full p-3 border rounded-lg">
-                        <input type="number" placeholder="Total Calories" class="w-full p-3 border rounded-lg">
-                        <button class="w-full bg-pink-500 text-white font-bold py-3 rounded-lg">Add Quick Food</button>
+
+                    <div id="content-quick" class="hidden space-y-4 p-4">
+                        <div id="quick-add-form-container">
+                            </div>
+                        <button id="add-quick-food-btn" class="w-full bg-pink-500 text-white font-bold py-3 rounded-lg hover:bg-pink-600">Add Quick Food</button>
                     </div>
+                </div>
+
+                <div id="create-food-button-wrapper" class="hidden">
+                    <a href="create-food.html" class="absolute bottom-24 left-6 right-6 z-20 block w-auto text-center bg-pink-500 text-white font-bold py-3 rounded-lg hover:bg-pink-600 shadow-lg transition-transform hover:scale-105">
+                        Buat Makanan Baru (+)
+                    </a>
                 </div>
                 </div>
         </div>
