--- a/diary.html
+++ b/diary.html
@@ -68,8 +68,8 @@
                     <h2 class="font-bold text-lg text-gray-900">Today</h2>
                     <button class="p-2 text-gray-600 rounded-full"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg></button>
                 </div>
-
-                <div class="glass-card rounded-xl p-4 mb-4">
+            <a href="goals.html" class="block">
+                <div class="glass-card rounded-xl p-4 mb-4 hover:bg-white/80 transition-colors cursor-pointer">
                     <div class="flex justify-between items-center mb-2">
                         <div class="flex items-center">
                             <img src="./ASSET/spoon-and-fork.png" alt="Cutlery icon" class="w-6 h-6 mr-2">
@@ -82,6 +82,7 @@
                         <div id="calories-progress" class="bg-pink-500 h-2 rounded-full" style="width: 1%"></div>
                     </div>
                 </div>
+            </a>
 
                 <div class="space-y-4">
                     <div class="glass-card rounded-xl p-4">
