--- a/workout.html
+++ b/workout.html
@@ -379,6 +379,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    <script src="data.js"></script>
     <script src="workout.js"></script>
 </body>
 </html>
