--- a/coach-stuff/coach-profile-editor.html
+++ b/coach-stuff/coach-profile-editor.html
@@ -6,7 +6,7 @@
     <title>Edit Coach Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         body { font-family: 'Inter', sans-serif; }
         .form-input { background-color: #f9fafb; border: 2px solid #e5e7eb; transition: all 0.2s; border-radius: 0.75rem; padding: 0.75rem; }
@@ -107,7 +107,7 @@
         </nav>
     </div>
 
-    <script src="data.js"></script>
+    <script src="../data.js"></script>
     <script src="coach-profile-editor.js"></script>
     <script src="main-coach.js"></script>
 </body>
