--- a/coach-stuff/coach-profile-editor.html
+++ b/coach-stuff/coach-profile-editor.html
@@ -91,21 +91,21 @@
             </main>
         </div>
 
-        <div id="plus-menu-coach" class="hidden absolute bottom-24 right-4 z-30 space-y-3">
-    <a href="coach-program-builder.html" class="flex items-center justify-end group">
-        <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Create New Program</span>
-        <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path></svg>
+        <div id="plus-menu-coach" class="absolute bottom-24 right-4 z-30 space-y-3 opacity-0 transform scale-95 pointer-events-none">
+             <a href="coach-program-builder.html" class="flex items-center justify-end group">
+                <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Create New Program</span>
+                <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path></svg>
+                </div>
+            </a>
+            <a href="#" class="flex items-center justify-end group">
+                <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Add New Client</span>
+                <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path></svg>
+                </div>
+            </a>
         </div>
-    </a>
-    <a href="#" class="flex items-center justify-end group">
-        <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Add New Client</span>
-        <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
-             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path></svg>
-        </div>
-    </a>
-</div>
-<div id="plus-menu-overlay" class="hidden absolute inset-0 bg-black/30 z-20"></div>
+        <div id="plus-menu-overlay" class="hidden absolute inset-0 bg-black/30 z-20"></div>
 
         <nav class="absolute bottom-4 left-1/2 -translate-x-1/2 w-[95%] max-w-sm z-20 glass-card grid grid-cols-5 items-center p-2 rounded-2xl">
     
