--- a/coach-stuff/coach-dashboard.html
+++ b/coach-stuff/coach-dashboard.html
@@ -172,6 +172,20 @@
             </main>
         </div>
 
+        <section id="all-actions-view" class="hidden relative z-10 flex flex-col h-full">
+            <header class="p-6 pt-8 flex-shrink-0 bg-white/50 backdrop-blur-sm border-b border-gray-200 flex items-center space-x-3">
+                <button id="back-to-dashboard-from-actions-btn" class="p-2 text-gray-600 rounded-full hover:bg-gray-200/50">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
+                </button>
+                <h1 class="text-xl font-bold text-gray-900">All Action Items</h1>
+            </header>
+
+            <main class="flex-grow overflow-y-auto p-6 pb-28 space-y-3">
+                <div id="all-actions-list-container">
+                    </div>
+            </main>
+        </section>
+
         <div id="plus-menu-coach" class="absolute bottom-24 right-4 z-30 space-y-3 opacity-0 transform scale-95 pointer-events-none">
              <a href="coach-program-builder.html" class="flex items-center justify-end group">
                 <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Create New Program</span>
