--- a/coach-stuff/coach-profile-editor.html
+++ b/coach-stuff/coach-profile-editor.html
@@ -12,8 +12,13 @@
         .form-input { background-color: #f9fafb; border: 2px solid #e5e7eb; transition: all 0.2s; border-radius: 0.75rem; padding: 0.75rem; }
         .form-input:focus { border-color: #ec4899; background-color: white; box-shadow: none; outline: none; }
         .bg-primary-gradient { background-image: linear-gradient(to right, #ec4899, #d946ef); }
-        .nav-background { background: rgba(255, 255, 255, 0.85); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.4); }
-        /* Pastikan ini ada di dalam tag <style> di HTML Anda */
+        /* MENJADI SEPERTI INI (agar konsisten dengan halaman lain): */
+.glass-card { 
+    background: rgba(255, 255, 255, 0.85); 
+    backdrop-filter: blur(12px); 
+    -webkit-backdrop-filter: blur(12px); 
+    border: 1px solid rgba(255, 255, 255, 0.4); 
+}
 .nav-active {
             color: #ec4899; /* Ini adalah warna pink-500 Tailwind */
         }
@@ -99,7 +104,7 @@
                 </div>
             </a>
             <a href="#" class="flex items-center justify-end group">
-                <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Add New Client</span>
+                <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Add New Schedule</span>
                 <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path></svg>
                 </div>
