--- a/coach-stuff/coach-dashboard.html
+++ b/coach-stuff/coach-dashboard.html
@@ -170,10 +170,10 @@
                 </div>
             </a>
             <a href="coach-schedule.html" class="flex items-center justify-end group">
-                <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Add New Client</span>
-                <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path></svg>
-                </div>
+                <span class="bg-white text-gray-700 font-semibold text-sm px-4 py-2 rounded-lg shadow-md mr-3 group-hover:bg-gray-100 transition-colors">Manage Schedule</span>
+               <div class="bg-primary-gradient text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+</div>
             </a>
         </div>
         <div id="plus-menu-overlay" class="hidden absolute inset-0 bg-black/30 z-20"></div>
