--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
         .bg-primary-gradient {
             background-image: linear-gradient(to right, #ec4899, #d946ef);
         }
-        /* Style untuk Notifikasi Toast Baru */
+        /* Style untuk Notifikasi Toast tetap ada untuk post dinamis nanti */
         .toast-notification {
             background: rgba(26, 26, 26, 0.9);
             color: white;
@@ -72,7 +72,7 @@
 
                 <div class="flex-grow overflow-y-auto -mr-2 pr-2 pb-28">
                     <div id="feed-explore" class="space-y-5">
-                        <div class="glass-card rounded-xl p-4" data-food-json='{"name":"Oatmeal with Berries","calories":210,"serving":"1 bowl","carbs":40,"fat":4,"protein":5}'>
+                        <div class="glass-card rounded-xl p-4">
                             <div class="flex items-center mb-3">
                                 <img src="https://i.pravatar.cc/150?u=jane" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
                                 <div>
@@ -85,14 +85,10 @@
                              <div class="flex items-center text-gray-500 mt-4">
                                 <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"></path></svg><span class="text-sm">18</span></button>
                                 <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors ml-4"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.068.158 2.098.286 3.15 0.405a21.23 21.23 0 01-2.672 3.11a.75.75 0 00.058 1.141 22.536 22.536 0 005.102-2.192.53.53 0 00.27-0.215c.012-.02.023-.04.033-.06a21.23 21.23 0 012.894 0c.01.02.021.04.033.06.096.106.18.204.27.215a22.536 22.536 0 005.102 2.192.75.75 0 00.058-1.141 21.23 21.23 0 01-2.672-3.11c1.052-.119 2.082-.247 3.15-.405 1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.344 48.344 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"></path></svg><span class="text-sm">3</span></button>
-                                <button class="save-food-btn flex items-center ml-auto px-3 py-1.5 text-xs font-semibold text-gray-600 bg-gray-100/80 rounded-full border border-gray-200 hover:border-pink-300 hover:bg-pink-50 hover:text-pink-600 transition-colors">
-                                    <svg class="w-4 h-4 -ml-1 mr-1.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.5v15m7.5-7.5h-15"></path></svg>
-                                    Add Food
-                                </button>
                             </div>
                         </div>
 
-                        <div class="glass-card rounded-xl p-4" data-food-json='{"name":"Grilled Salmon","calories":208,"serving":"100 gr","carbs":0,"fat":13,"protein":20}'>
+                        <div class="glass-card rounded-xl p-4">
                             <div class="flex items-center mb-3">
                                 <img src="https://i.pravatar.cc/150?u=johnsmith" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
                                 <div>
@@ -104,16 +100,12 @@
                             <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?w=500&q=80" alt="Grilled salmon meal" class="rounded-lg w-full mb-3">
                             <div class="flex items-center text-gray-500 mt-4">
                                 <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"></path></svg>
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"></path></svg>
                                     <span class="text-sm">31</span>
                                 </button>
                                 <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors ml-4">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.068.158 2.098.286 3.15 0.405a21.23 21.23 0 01-2.672 3.11a.75.75 0 00.058 1.141 22.536 22.536 0 005.102-2.192.53.53 0 00.27-0.215c.012-.02.023-.04.033-.06a21.23 21.23 0 012.894 0c.01.02.021.04.033.06.096.106.18.204.27.215a22.536 22.536 0 005.102 2.192.75.75 0 00.058-1.141 21.23 21.23 0 01-2.672-3.11c1.052-.119 2.082-.247 3.15-.405 1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.344 48.344 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"></path></svg>
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.068.158 2.098.286 3.15 0.405a21.23 21.23 0 01-2.672 3.11a.75.75 0 00.058 1.141 22.536 22.536 0 005.102-2.192.53.53 0 00.27-0.215c.012-.02.023-.04.033-.06a21.23 21.23 0 012.894 0c.01.02.021.04.033.06.096.106.18.204.27.215a22.536 22.536 0 005.102 2.192.75.75 0 00.058-1.141 21.23 21.23 0 01-2.672-3.11c1.052-.119 2.082-.247 3.15-.405 1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.344 48.344 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"></path></svg>
                                     <span class="text-sm">7</span>
-                                </button>
-                                 <button class="save-food-btn flex items-center ml-auto px-3 py-1.5 text-xs font-semibold text-gray-600 bg-gray-100/80 rounded-full border border-gray-200 hover:border-pink-300 hover:bg-pink-50 hover:text-pink-600 transition-colors">
-                                    <svg class="w-4 h-4 -ml-1 mr-1.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.5v15m7.5-7.5h-15"></path></svg>
-                                    Add Food
                                 </button>
                             </div>
                         </div>
@@ -183,7 +175,7 @@
                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
                 <span>Progress</span>
             </a>
-            <a href="create.html" class="emblem-item">
+            <a href="share-food.html" class="emblem-item">
                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
                 <span>Create Post</span>
             </a>
@@ -205,7 +197,7 @@
                 <span class="text-xs font-bold">Community</span>
             </a>
             <a href="diary.html" class="flex flex-col items-center text-gray-600 hover:text-pink-500 py-1">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M3.5 5.5l1.5 1.5l2.5 -2.5"></path><path d="M3.5 11.5l1.5 1.5l2.5 -2.5"></path><path d="M3.5 17.5l1.5 1.5l2.5 -2.5"></path><path d="M11 6l9 0"></path><path d="M11 12l9 0"></path><path d="M11 18l9 0"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1 rotate-180" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M5 3h4"></path><path d="M7 3v12"></path><path d="M4 15h6v3a3 3 0 0 1 -6 0v-3z"></path><path d="M14 21v-3a3 3 0 0 1 6 0v3"></path><path d="M17 21v-18"></path></svg>
                 <span class="text-xs">Diary</span>
             </a>
             <button id="plus-button" class="bg-primary-gradient text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg -mt-6 transform hover:scale-110 transition-transform">
