--- a/marketplace.html
+++ b/marketplace.html
@@ -15,12 +15,29 @@
         .glass-card { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(16px); -webkit-backdrop-filter: blur(16px); border-radius: 1.25rem; border: 1px solid rgba(255, 255, 255, 0.6); box-shadow: 0 8px 25px rgba(0, 0, 0, 0.06); transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
         .toggle-active { background-color: white; color: #c026d3; box-shadow: 0 4px 15px rgba(0,0,0,0.08); font-weight: 700; }
         .filter-option-active { background-color: #fce7f3; border-color: #f472b6; color: #be185d; font-weight: 600; }
+        @keyframes flash {
+        0% { box-shadow: 0 0 0 0 rgba(217, 70, 239, 0.5); }
+        70% { box-shadow: 0 0 0 12px rgba(217, 70, 239, 0); }
+        100% { box-shadow: 0 0 0 0 rgba(217, 70, 239, 0); }
+    }
+    .highlight-flash {
+        animation: flash 1.6s ease-out 3;
+        border-radius: 1.25rem; /* pastikan radiusnya sama dengan owned-program-actions */
+    }
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
 
     <div id="app-container" class="w-full max-w-md mx-auto bg-white/70 rounded-3xl shadow-xl overflow-hidden relative h-[800px] md:h-[850px]">
         
+        <div id="toast-notification" class="hidden absolute top-5 left-1/2 -translate-x-1/2 z-50 flex items-center w-auto max-w-xs p-4 space-x-4 text-gray-500 bg-white rounded-xl shadow-lg" role="alert">
+            <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg">
+                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+                <span class="sr-only">Check icon</span>
+            </div>
+            <div id="toast-message" class="ml-3 text-sm font-semibold text-slate-700"></div>
+        </div>
+    
         <div class="relative flex flex-col h-full bg-transparent">
             <div class="aurora-bg-1"></div>
             <div class="aurora-bg-2"></div>
